# LAMP

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml
docs/: baselines.md  data_format.md  installation.md  media.md  residual_rl.md  training.md
imitation_learning/: README.md  __init__.py
imitation_learning/behavior_clone/: README.md  __init__.py
imitation_learning/behavior_clone/model/: __init__.py  bc_dataset.py  bc_policy_jax.py  checkpoint_compat.py
imitation_learning/behavior_clone/scripts/: __init__.py  eval_common.py  eval_jax.py  train_example_jax.sh  train_jax.py
imitation_learning/common/: README.md  __init__.py
imitation_learning/common/model/: __init__.py  bc_dataset.py  checkpoint_compat.py  policy_jax.py
pca/: README.md  __init__.py
pca/model/: __init__.py  data_io.py  pca_hand.py
pca/scripts/: fit_pca.py
reinforcement_learning/: README.md  __init__.py
reinforcement_learning/residual_rl/: __init__.py
reinforcement_learning/residual_rl/agents/continuous/: __init__.py  residual_sac.py  sac.py
reinforcement_learning/residual_rl/common/: __init__.py  common.py
reinforcement_learning/residual_rl/networks/: __init__.py  actor_critic_nets.py  bc_vae.py  mlp.py  vae.py
reinforcement_learning/residual_rl/scripts/: __init__.py  smoke_test_imports.py
reinforcement_learning/residual_rl/utils/: __init__.py  bc_vae.py  factory.py  jax_utils.py  train_utils.py
reinforcement_learning/residual_rl/vision/: __init__.py  data_augmentations.py  film_conditioning_layer.py  resnet_v1.py
reinforcement_learning/residual_rl/wrappers/: __init__.py  bc_vae_context.py
scripts/: check_python_syntax.py  convert_pkl_to_demos.py  convert_to_delta_action.py
vae/: README.md  __init__.py
vae/model/: __init__.py  checkpoint_compat.py  data_io.py  hand_vae_jax.py  utils.py
vae/scripts/: __init__.py  eval_jax.py  train_jax.py
vq-vae/: README.md
vq-vae/model/: checkpoint_compat.py  hand_dataset.py  hand_vqvae.py  utils.py
vq-vae/scripts/: export_codebook_jax.py  prepare_dataset.py  train_jax.py
