[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "corl-supplement-code"
authors = [
    {name = "Anonymous Authors"}
]
description = "Anonymized supplementary code for imitation learning and residual reinforcement learning"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["robot learning", "imitation learning", "reinforcement learning"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "chex",
    "distrax",
    "einops",
    "flax",
    "gymnasium",
    "jax",
    "matplotlib",
    "numpy",
    "optax",
    "torch",
    "torchvision",
    "tqdm",
    "transformers",
]

[project.optional-dependencies]
dev = [
    "black>=24.2.0",
    "ruff>=0.2.2",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["cache", "data", "outputs", "visualizations", "pretrained_models"]

[tool.black]
line-length = 121
target-version = ["py310"]
preview = true

[tool.ruff]
line-length = 121
target-version = "py310"

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "RUF", "W"]
ignore = ["F722"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
